// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VRow.ts should render with regular slots 1`] = `

<tr>
  <td class="text-xs-left">
    <p class="test">
      $0.68
    </p>
  </td>
  <td class="text-xs-left">
    <p class="test">
      $0.65
    </p>
  </td>
</tr>

`;

exports[`VRow.ts should render with scoped slots 1`] = `

<tr>
  <td class="text-xs-left">
    <p class="test petrol">
      0.68
    </p>
  </td>
  <td class="text-xs-left">
    <p class="test diesel">
      0.65
    </p>
  </td>
</tr>

`;

exports[`VRow.ts should render without slots 1`] = `

<tr>
  <td class="text-xs-left">
    0.68
  </td>
  <td class="text-xs-left">
    0.65
  </td>
</tr>

`;
